--- a/sass/deprecated/style.scss
+++ b/sass/deprecated/style.scss
@@ -271,3 +271,70 @@ h2 {
 .y_axis {
   @extend .axis;
 }
+
+.table {
+  .C0000 {
+    @extend .state_block;
+    background-color: $C0000-color;
+  }
+  .C0001 {
+    @extend .state_block;
+    background-color: $C0001-color;
+  }
+  .C0010 {
+    @extend .state_block;
+    background-color: $C0010-color;
+  }
+  .C0011 {
+    @extend .state_block;
+    background-color: $C0011-color;
+  }
+  .C0100 {
+    @extend .state_block;
+    background-color: $C0100-color;
+  }
+  .C0101 {
+    @extend .state_block;
+    background-color: $C0101-color;
+  }
+  .C0110 {
+    @extend .state_block;
+    background-color: $C0110-color;
+  }
+  .C0111 {
+    @extend .state_block;
+    background-color: $C0111-color;
+  }
+  .C1000 {
+    @extend .state_block;
+    background-color: $C1000-color;
+  }
+  .C1001 {
+    @extend .state_block;
+    background-color: $C1001-color;
+  }
+  .C1010 {
+    @extend .state_block;
+    background-color: $C1010-color;
+  }
+  .C1011 {
+    @extend .state_block;
+    background-color: $C1011-color;
+  }
+  .C1100 {
+    @extend .state_block;
+    background-color: $C1100-color;
+  }
+  .C1101 {
+    @extend .state_block;
+    background-color: $C1101-color;
+  }
+  .C1110 {
+    @extend .state_block;
+    background-color: $C1110-color;
+  }
+  .C1111 {
+    @extend .state_block;
+    background-color: $C1111-color;
+  }
+}
